Fix overlapping on smallest mobile screen

--- a/client/w2w.css
+++ b/client/w2w.css
@@ -90,7 +90,7 @@ button:focus {
 
 .weatherInfo {
   position: absolute;
-  left: 45%;
+  left: 47%;
 }
 
 .sidebar-info {
